# pigeon-pea

./: .editorconfig  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  =3.5.2  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLUGIN_SYSTEM_ANALYSIS.md  PR151.json  PR151_reviews.json  PR_DESCRIPTION.md  README.md  README_SARASA.md  RFC_IMPLEMENTATION_REVIEW.md  SECURITY.md  Taskfile.yml  setup-pre-commit.ps1  setup-pre-commit.sh  temp-commit-editorconfig.md
.claude/: settings.local.json
.github/: SECURITY.md  pull_request_template.md
.local-packages/: Plate.SCG.General.DisposePattern.0.1.0.nupkg  Plate.SCG.Shared.Abstractions.0.1.0.nupkg  Plate.SCG.Shared.Attributes.0.1.0.nupkg  Plate.Shared.Abstractions.0.1.0.nupkg
docs/: AGENT_INFRASTRUCTURE_ISSUES.md  CODE_REVIEW_AGENT_INFRASTRUCTURE.md  DOCUMENTATION-SCHEMA.md  ENHANCEMENT_PLAN.md  GITHUB_ISSUES.md  GITHUB_ISSUES_DEVTOOLS.md  LABEL_STRATEGY.md  README.md  RFC_004_EXECUTION_ORDER.md  SELF_REVIEW_RFC_004_PLANNING.md  determinism-reference.md  performance-baseline.md
dotnet/: .editorconfig  .gitignore  ARCHITECTURE.md  Directory.Build.props  NuGet.Config  PigeonPea.sln  README.md  mapgen.json
fonts/: README.md
requirements/: dev.txt
scripts/: README.md  check-terminal.bat  (+12 more)
tools/dev-tool/: Cargo.toml  README.md
tools/dev-tool/src/: cli.rs  envelope.rs  main.rs  protocol.rs  ws.rs
tools/dev-tool/src/commands/: mod.rs  regen_map.rs  reload.rs  spawn.rs  tp.rs
tools/dev-tool/tests/: integration_test.rs  integration_tests.rs
(+532 files in other folders)
